Feat(https://github.com/Tag-Me-DAW2/sprints/issues/55): Añadida paginación a Categorias